add_library(Adon_Interface INTERFACE)

project(adonengine)

SET(ENGINE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(BASE_DIR ${ENGINE_DIR}/base)
SET(GRAPH_DIR ${ENGINE_DIR}/graphics)
SET(CAM_DIR ${ENGINE_DIR}/camera)
SET(OBJ_DIR ${ENGINE_DIR}/object)
SET(PHYS_DIR ${ENGINE_DIR}/physics)
SET(DATA_DIR ${ENGINE_DIR}/data)
SET(TIME_DIR ${ENGINE_DIR}/time)

FILE(GLOB BASE_HEAD ${BASE_DIR}/*.h)
FILE(GLOB BASE_SOURCE ${BASE_DIR}/*.cc)

FILE(GLOB APP_HEAD ${ENGINE_DIR}/*.h)
FILE(GLOB APP_SOURCE ${ENGINE_DIR}/*.cc)

FILE(GLOB GRAPH_HEAD ${GRAPH_DIR}/*.h)
FILE(GLOB GRAPH_SOURCE ${GRAPH_DIR}/*.cc)

FILE(GLOB CAMERA_HEAD ${CAM_DIR}/*.h)
FILE(GLOB CAMERA_SOURCE ${CAM_DIR}/*.cc)

FILE(GLOB OBJ_HEAD ${OBJ_DIR}/*.h)
FILE(GLOB OBJ_SOURCE ${OBJ_DIR}/*.cc)

FILE(GLOB PHYSICS_HEAD ${PHYS_DIR}/*.h)
FILE(GLOB PHYSICS_SOURCE ${PHYS_DIR}/*.cc)

FILE(GLOB DATA_HEAD ${DATA_DIR}/*.h)
FILE(GLOB DATA_SOURCE ${DATA_DIR}/*.cc)

FILE(GLOB TIME_HEAD ${TIME_DIR}/*.h)
FILE(GLOB TIME_SOURCE ${TIME_DIR}/*.cc)

SET(ENGINE_FILES ${GRAPH_HEAD} ${GRAPH_SOURCE} 
${CAMERA_HEAD} ${CAMERA_SOURCE} 
${OBJ_HEAD} ${OBJ_SOURCE} 
${PHYSICS_HEAD} ${PHYSICS_SOURCE} 
${APP_HEAD} ${APP_SOURCE}
${DATA_HEAD} ${DATA_SOURCE}
${TIME_HEAD} ${TIME_SOURCE}
${BASE_HEAD} ${BASE_SOURCE})

SOURCE_GROUP("adonengine" FILES ${ENGINE_FILES})

include_directories(${GRAPH_DIR} ${CAM_DIR} ${OBJ_DIR} ${PHYS_DIR} ${DATA_DIR} ${TIME_DIR} ${BASE_DIR})

ADD_LIBRARY(adonengine ${ENGINE_FILES})
TARGET_LINK_LIBRARIES(adonengine exts glew glfw mymathlib ${OPENGL_LIBS})
ADD_DEPENDENCIES(adonengine exts glew glfw mymathlib)

target_include_directories(Adon_Interface INTERFACE ${BASE_DIR} ${GRAPH_DIR} ${CAM_DIR} ${OBJ_DIR} ${PHYS_DIR} ${DATA_DIR} ${TIME_DIR} ${ENGINE_DIR})